# seismometer-downloader

./: Cargo.toml  Cross.toml  Dockerfile  openssl.sh
.github/workflows/: build.yml
src/: english.rs  japanese.rs  main.rs
src/gui/: loader.rs
